--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "http://agupta35.github.io/my-app",
+  "homepage": "http://agupta35.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
